Fixed bracket clipping issue.

--- a/src/app/css/equationEditor.css
+++ b/src/app/css/equationEditor.css
@@ -174,7 +174,7 @@ div.activeContainer {
 
 /* This overflow must be hidden, because brackets extend past
    equation boundaries, and mess up mouse interactions. */
-.bracket {
+.bracketWrapper {
     overflow: hidden;
 }
 
